// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Demo Component Testing Should renders without crashing 1`] = `
<div
  className="card p-2 m-2"
  style={
    Object {
      "width": "48%",
    }
  }
>
  <div
    className="h4"
  >
    0
    . 
    Title
  </div>
  <hr />
  <div
    className="card-body"
  >
    Dummy Child
  </div>
</div>
`;

exports[`Demo Component Testing Should renders without crashing with props 1`] = `
<div
  className="card p-2 m-2"
  style={
    Object {
      "width": "50%",
    }
  }
>
  <div
    className="h4"
  >
    1
    . 
    title
  </div>
  <hr />
  <div
    className="card-body"
  >
    Text
  </div>
</div>
`;
